[project]
name = "comfy-nodes"
description = "My nodes for ComfyUI"
version = "1.0.9"
dependencies = ["click==8.1.8", "numpy==1.26.4", "opencv-python==4.11.0.86", "pika==1.3.2", "pillow==10.4.0", "scipy==1.10.1", "setuptools==75.3.0", "wheel==0.45.1", "torch==2.6.0", "face-alignment==1.4.1"]

[project.urls]
Repository = "https://github.com/romakot321/comfy-nodes"

[tool.setuptools]
py-modules = []

[tool.comfy]
PublisherId = "romakot321"
DisplayName = "ComfyUI-Roman"
Icon = ""
