[project]
name = "romakot321-comfy"
description = "Image to face masks detection"
version = "1.0.9"
dependencies = ["click==8.1.8", "numpy==1.26.4", "opencv-python==4.11.0.86", "pika==1.3.2", "pillow==10.4.0", "scipy==1.10.1", "setuptools==75.3.0", "wheel==0.45.1", "torch==2.6.0", "mediapipe==0.10.14"]

[project.urls]
Repository = "https://github.com/romakot321/romakot321-comfy"

[tool.setuptools]
py-modules = []

[tool.comfy]
PublisherId = "romakot321"
DisplayName = "romakot321-comfy"
Icon = ""
